<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/avokado"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/okkk"
        android:text="@string/Avokado"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/apple"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/okkk"
        android:text="@string/Apple"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avokado" />

    <Button
        android:id="@+id/limon"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/okkk"
        android:text="@string/Limon"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/banan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple" />

    <Button
        android:id="@+id/banan"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/okkk"
        android:text="@string/Banan"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pear"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/okkk"
        android:text="@string/Pear"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="485dp"
        android:layout_height="882dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asd" />

</androidx.constraintlayout.widget.ConstraintLayout>